welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: recursive value a needs type
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.length-1) {if (nums(i)==lookingFor) a=i;val a = a};return a} 
                                                                                                                                         ^